--- a/index.html
+++ b/index.html
@@ -360,6 +360,8 @@
             </div>
             <hr>
             <p class="footer__copyright">Автор главного фото: Roman Tymochko</p>
+            <p class="footer__copyright">Created by <a href="https://www.youtube.com/channel/UC-ii73NUvqnJhGpieMlMstQ" target="_blank" title="Follow me:)">UNIWORKER</a>
+  </p>
           </div>
        </div>
       </div>
