--- a/eng/index.html
+++ b/eng/index.html
@@ -332,7 +332,8 @@
               </span></a>
           </div>
           <hr>
-          <p class="footer__copyright">Author of all photos: Roman Tymochko</p>
+          <p class="footer__copyright">Created by <a href="https://www.youtube.com/channel/UC-ii73NUvqnJhGpieMlMstQ" target="_blank" title="Follow me:)">UNIWORKER</a>
+  </p>
         </div>
       </div>
     </div>
